--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>index</title>
 </head>
 <body>
+    <ul>
+        <li>apple</li>
+        <li>banana</li>
+    </ul>
     
 </body>
 </html>
